# Murpc

./: CMakeLists.txt  README.md  autobuild.sh
include/: loadxmlconfig.h  rpc_meta.pb.h  rpcclient.h  rpcserver.h  zookeeperutils.h
src/: CMakeLists.txt  loadxmlconfig.cpp  rpc_cfg.xml  rpc_meta.pb.cc  rpc_meta.proto  rpcclient.cpp  rpcserver.cpp  zookeeperutils.cpp
test/: CMakeLists.txt  service.pb.cc  service.pb.h  service.proto  testrpcclient.cpp  testrpcserver.cpp
